Add schema routing, country_codes seed, and generate_schema_name macro
- Add generate_schema_name macro for custom schema routing
- Configure staging/intermediate/marts model schemas in dbt_project.yml
- Add country_codes seed (ISO 3166) with tests
- Change default profile schema to main

--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -11,3 +11,19 @@ target-path: "target"
 clean-targets:
   - "target"
   - "dbt_packages"
+
+models:
+  spotify_podcast_pipeline:
+    staging:
+      +materialized: view
+      +schema: staging
+    intermediate:
+      +materialized: view
+      +schema: intermediate
+    marts:
+      +materialized: table
+      +schema: analytics
+
+seeds:
+  spotify_podcast_pipeline:
+    +schema: seeds
